--- a/resolution.tex
+++ b/resolution.tex
@@ -28,13 +28,21 @@ This paper describes...
 
 \section{Introduction}
 
-An increasing number of atmospheric dynamical cores are being developed to maximize efficiency on massively parallel systems, permitting regionally-refined high-resolution ($\Delta x = 50$ km or less), or even globally high-resolution weather and climate simulations \citep{MPASatm,Z2014QJRMS,HETAL2016JCLIM,DCMIP16,LetAl2018JAMES}. Incorporating these advances into Atmospheric General Circulation Models (AGCMs) requires the development of physical parameterizations ({\em{physics}}) appropriate for the diversity of grid configurations that these dynamical cores are now able to support, referred to as scale-aware physics. The most common approach towards developing scale-aware physics has been through the lens of limited area, cloud resolving simulations \citep[e.g.,][]{PC2008JAS,AW2013JAS,SZ2018JCLIM}. Through subsequently filtering large-eddy simulation solutions to lower-resolution grids, a relationship between resolved and unresolved moments may be understood and ultimately parameterized. While this approach is likely necessary for developing scale-aware physics, it is not sufficient. Since the equations of motions have inherent scale dependencies, resolved dynamical modes are a function of the native grid resolution \citep{O1981JAS,WETAL1997MWR,PG2006JAS,JR2016QJRMS,J2017JAMES}. Scale-aware physics should also recognize native grid dependencies.
+An increasing number of Atmospheric General Circulation Models (AGCMs) are being developed to maximize efficiency on massively parallel systems, permitting regionally-refined high-resolution, or even globally high-resolution weather ($\Delta x$ on the order of kilometers) and climate ($\Delta x = 50$ km or less) simulations \citep{MPASatm,Z2014QJRMS,HETAL2016JCLIM,DCMIP16,LetAl2018JAMES}. These models are built using unstructured meshes that while allow for substantial grid flexibility, requires physical parameterizations ({\em{physics}}) that behave consistently as the truncation scale of the model changes with different grid resolutions, referred to as scale-aware physics. The most common approach towards developing scale-aware physics has been through the lens of limited area, large-eddy simulations \citep[e.g.,][]{PC2008JAS,AW2013JAS,SZ2018JCLIM}. Through subsequently filtering large-eddy solutions to lower-resolution grids, a relationship between first- and higher-order moments \citep{G1992JFM} may be understood and ultimately parameterized. While this approach is likely necessary for developing scale-aware physics, it is not sufficient. Since the equations of motions have inherent scale dependencies, resolved dynamical modes vary with the native grid resolution \citep{O1981JAS,WETAL1997MWR,PG2006JAS,JR2016QJRMS,J2017JAMES}. Scale-aware physics should also recognize these native grid dependencies.
 
-The sensitivity of the Community Atmosphere Model (CAM), and its predecessor, the Community Climate Model (CCM) to horizontal resolution is well documented. Despite thirty years of continual model development, there are robust sensitivities to resolution (hereafter {\em{resolution}} refers to {\em{horizontal resolution}}) which have persisted in all versions of the model. Total precipitable water decreases with resolution \citep{KW1991JGR,WETAL1995CD,W2008TELLUS,RETAL2013JCLIM,ZetAl2014JCb,HR2017JCLIM}, which typically, but not always \citep[see][]{WETAL1995CD,ZetAl2014JCb}, coincides with a reduction in cloud cover. \cite{KW1991JGR,WETAL1995CD} suggested that the drying of the atmosphere is consistent with the observed greater magnitude resolved vertical velocities with resolution, with greater subsiding motion increasing the export of dry air from the upper troposphere. This mechanism is consistent with an analysis of moisture budgets in CAM, version 4 (CAM4) across multiple resolutions \citep{YETAL2014JCLIM,HR2017JCLIM}.
+The sensitivity of the Community Atmosphere Model \citep[CAM;][]{CAM5}, and its predecessor, the Community Climate Model (CCM) to horizontal resolution is well documented. Despite thirty years of continual model development, there are robust sensitivities to resolution (hereafter {\em{resolution}} refers to {\em{horizontal resolution}}) which have persisted in all versions of the model. The atmosphere dries with increasing resolution, seen through the reduction in total precipitable water \citep{KW1991JGR,WETAL1995CD,W2008TELLUS,RETAL2013JCLIM,ZetAl2014JCb,HR2017JCLIM}, which typically, but not always \citep[see][]{WETAL1995CD,ZetAl2014JCb}, coincides with a reduction in cloud cover. \cite{KW1991JGR} and \cite{WETAL1995CD} suggested that the drying of the atmosphere is consistent with the greater magnitude resolved vertical velocities with increasing resolution, with greater subsiding motion increasing the export of dry air from the upper troposphere. This mechanism is consistent with an analysis of moisture budgets in CAM, version 4 \citep[CAM4;][]{CAM4} across multiple resolutions \citep{YETAL2014JCLIM,HR2017JCLIM}.
 
-It is well known that the magnitude of vertical velocities increase with resolution in atmospheric models. While the cause of this sensitivity is established in the cloud-resolving and large-eddy simulation literature \citep[see][and references therein]{J2017JAMES}, only recently has the vertical velocity field in AGCMs and there sensitivity to resolution received attention, albeit with conflicting explanations \citep{DETALA2016ACP,RETAL2016CD,HR2018JAMES}. In this paper, it is shown that the vertical velocities in CAM, version 6 (CAM6) scale like $\Delta x^{-1}$, and that the inadequacy of this scaling to explain prior CAM behavior \citep{HR2017JCLIM} is due to time-truncation errors arising from too large a physics time-step ($\Delta t_{phys}$) at higher-resolutions \citep{HR2018JAMES,HETAL2019JAMES}. Furthermore, the $\Delta x^{-1}$ scaling is entirely consistent with the mechanism of resolution sensitivity in cloud-resolving and large-eddy models, i.e., the inherent sensitivities of resolved dynamical modes to native grid resolution.
+It is well known that the magnitude of vertical velocities increase with resolution in atmospheric models. While the cause of this sensitivity has been established in the large-eddy simulation literature \citep[see][and references therein]{J2017JAMES}, only recently has the vertical velocity field in AGCMs and their sensitivity to resolution received attention, albeit with conflicting explanations \citep{DETALA2016ACP,RETAL2016CD,HR2018JAMES}. To generalize the relationship between vertical velocity and resolution, let $\alpha$ refer be the ratio of $W_0$, the vertical velocity scale of some reference grid spacing $\Delta x_0$, to $W$, the vertical velocity scale of any $\Delta x$. A power-law for $\alpha$ in $\Delta x$ is then,
+\begin{equation}
+\alpha^{-1} = \frac{W}{W_0} = \left( \frac{\Delta x}{\Delta x_0} \right)^n, \label{eq:alpha}
+\end{equation}
+where $n$ is the power-law exponent. 
 
-Another robust response of the CAM-lineage to resolution is an increase in grid-scale precipitation rates (also referred to as stratiform precipitation in the literature), at the expense of parameterized convective precipitation rates. This behavior is summarized in Figure~\ref{fig:cam-history}, which is a bar-graph of the climatological grid-scale and convective precipitation rates in prior CAM/CCM convergence studies. The studies of \cite{KW1991JGR,WETAL1995CD,W2013QJRMS} indicate that the tendency to reduce $\Delta t_{phys}$ with resolution would by itself reduce the convective precipitation rates, however Figure~\ref{fig:cam-history} (top row) indicates that convergence studies with fixed $\Delta t_{phys}$ still show a reduction in convection precipitation rates with resolution.
+\cite{RETAL2016CD} derive an estimate $n= b-1$ by combining a scale analysis of the continuity equation with a power law representation $\Delta x^{2b}$ of the second-order structure function of the horizontal wind. Observations indicate that $b=\frac{1}{3}$ for scales less than about $1000$ km \citep{CETAL1999JGR}, which according to the Weiner–Khinchin theorem, is equivalent to the observed $-\frac{5}{3}$ slope of the kinetic energy spectrum  \citep{NG1985JAS} through the relation $-\left( 2b+1 \right) $. \cite{RETAL2016CD} argue that the emergent constraint on the slope of the kinetic energy spectrum in both models and observations indicates that $n= -\frac{2}{3}$.
+
+For large-eddy simulations, the sensitivity of vertical velocities to resolution is explained through a scale analysis of the dynamical equations \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}. For hydrostatic scales relevant to AGCMs, a scale analysis of the Poisson yields $W \propto D^{-1}$, where $D$ is the horizontal scale of the buoyancy perturbation \citep{HR2018JAMES}. In CAM aqua-planet simulations, the largest source of buoyancy is associated with grid-scale cloud formation, whose horizontal extent are set by the effective resolution of the model, about $5-10 \Delta x$, and so this gives $n=-1$ \citep{HR2018JAMES}. In this paper, it is shown that the resolution sensitivity of vertical velocities in CAM, version 6 (CAM6) are well described with $n=-1$, and that the inadequacy of this scaling to explain prior CAM behavior \citep{HR2017JCLIM} is due to time-truncation errors arising from too large a physics time-step ($\Delta t_{phys}$) at higher-resolutions \citep{HR2018JAMES,HETAL2019JAMES}.
+
+Another robust response of the CAM-lineage to resolution is an increase in grid-scale precipitation rates (also referred to as stratiform precipitation in the literature), at the expense of parameterized convective precipitation rates. This behavior is summarized in Figure~\ref{fig:cam-history}, which is a bar-graph of the climatological grid-scale and convective precipitation rates in prior CAM/CCM convergence studies. The studies of \cite{KW1991JGR}, \cite{WETAL1995CD} and \cite{W2013QJRMS} indicate that the tendency to reduce $\Delta t_{phys}$ with resolution would by itself reduce the convective precipitation rates, however Figure~\ref{fig:cam-history} (top row) indicates that convergence studies with fixed $\Delta t_{phys}$ still show a reduction in convection precipitation rates with resolution.
 
 \begin{figure}[t]
 \begin{center}
