--- a/bib.bib
+++ b/bib.bib
@@ -8936,3 +8936,32 @@ the Simulated Greenland Surface Mass Balance},
   year={2019},
   publisher={Wiley Online Library}
 }
+
+@book{LauritzenBook,
+  title={Numerical techniques for global atmospheric models},
+  author={Lauritzen, Peter H and Jablonowski, Christiane and Taylor, Mark A and Nair, Ramachandran D},
+  volume={80},
+  year={2011},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{G1992JFM,
+  title={Turbulence: the filtering approach},
+  author={Germano, Massimo},
+  journal={Journal of Fluid Mechanics},
+  volume={238},
+  pages={325--336},
+  year={1992},
+  publisher={Cambridge University Press}
+}
+
+@article{CETAL1999JGR,
+  title={Horizontal wavenumber spectra of winds, temperature, and trace gases during the Pacific Exploratory Missions: 1. Climatology},
+  author={Cho, John YN and Zhu, Yong and Newell, Reginald E and Anderson, Bruce E and Barrick, John D and Gregory, Gerald L and Sachse, Glen W and Carroll, Mary Anne and Albercook, George M},
+  journal={Journal of Geophysical Research: Atmospheres},
+  volume={104},
+  number={D5},
+  pages={5697--5716},
+  year={1999},
+  publisher={Wiley Online Library}
+}
