--- a/results.tex
+++ b/results.tex
@@ -2,21 +2,21 @@
 
 \subsection{Dynamical Core}
 
-This study uses the spectral-element dynamical core option of Community Atmosphere Model \citep[CAM-SE;][]{TF2010JCP,DetAl2012IJHPCA}, coupled with the mass conserving, semi-Lagrangian advection method for accelerated multi-tracer transport \citep[CSLAM;][]{LTOUNGK2017MWR}, and dry-mass vertical coordinate with comprehensive treatment of moisture and energy \citep{LetAl2018JAMES}. Dry dynamics are solved using the spectral element method in which the vector-invariant form of the hydrostatic equations of motion are solved with a degree 3 polynomial basis in each element, and the solutions are patched together at the boundaries using the direct stiffness summation to form a global basis. The elements are defined by a cubed-sphere grid, and the notation for horizontal grid resolution is an `$ne$' followed by the number of elements contained on an edge of one cubed-sphere face, e.g., $ne30$. Hyper-viscous $\nabla^{4}$ explicit numerical dissipation is applied to temperature, dry pressure thickness, rotational and divergent winds. The advection of tracers uses a semi-Lagrangian method on a finite volume grid constructed the cubed-sphere grid, and contains the same degrees of freedom and the dry dynamics. The coupled system conserves energy, mass and preserves linear correlations between two reactive species to within machine precision \citep{HL2018MWR}.
+This study uses the spectral-element dynamical core option of Community Atmosphere Model \citep[CAM-SE;][]{DetAl2012IJHPCA}, coupled with a mass conserving, semi-Lagrangian advection method for accelerated multi-tracer transport \citep[CSLAM;][]{LTOUNGK2017MWR}, and dry-mass vertical coordinate with comprehensive treatment of moisture and energy \citep{LetAl2018JAMES}. The dry dynamics are solved using the high-order, momentum, mass and energy conserving spectral element method \citep{TF2010JCP}, with the elements defined by a cubed-sphere grid. The notation for the horizontal grid resolution is an `$ne$' followed by the number of elements making up an edge of one cubed-sphere face, e.g., $ne30$. Hyper-viscous $\nabla^{4}$ explicit numerical dissipation is applied to temperature, dry pressure thickness, rotational and divergent winds. The advection of tracers by CSLAM uses a finite volume grid constructed from the cubed-sphere of elements, and contains the same degrees of freedom as the dry dynamics. The coupled system conserves energy, mass and preserves linear correlations between two reactive species to within machine precision \citep{HL2018MWR}.
 
-The physics are evaluated on the tracer advection grid, and the tendencies mapped back to the spectral element grid \citep[CAM-SE-CSLAM;][]{HL2018MWR}. A coarser physics grid, containing $\frac{5}{9}$ fewer degrees of freedom than the dynamical core grid is also available as part of the CAM-SE-CSLAM package (Chapter~\ref{sec:chapter5}). This configuration is also used in this study, but it is considered a perturbed configuration from the default configuration in this study. The dynamics time-step is subcycled within a longer physics time-step $\Delta t_{phys}$, and the temperature and momentum increments from the physics are then divided by the number of subcycles and added to the dynamical core at the beginning of each subcycle; the full moisture increment from the physics is applied only at the start of the first subcycle to conserve tracer mass \citep[$ftype=2$ option in][]{LW2019JAMES}. 
+The physics are evaluated on the finite-volume CSLAM grid, and the tendencies mapped back to the spectral element grid \citep[CAM-SE-CSLAM;][]{HL2018MWR}. A coarser physics grid, containing $\frac{5}{9}$ fewer degrees of freedom than the dynamical core grid is also available as part of the CAM-SE-CSLAM package \citep{HETAL2019JAMES}. This lower-resolution physics grid is used in this study, but only as a member of a perturbed parameter ensemble and not in the default convergence experiment. The dynamics time-step is subcycled within a longer physics time-step $\Delta t_{phys}$, and the temperature and momentum increments from the physics are divided by the number of subcycles and added to the dynamical core at the beginning of each subcycle; the full moisture increment from the physics is applied only at the start of the first subcycle to conserve tracer mass \citep[$ftype=2$ option in][]{LetAl2018JAMES}.
 
 \subsection{Moist Physics}
 
-The simulations use Community Atmosphere Model, version 6 physics (CAM6; \url{https://ncar.github.io/CAM/doc/build/html/users_guide/index.html}). The Cloud Layers Unified by Binormals \citep[CLUBB][]{GETAL2002JAS,BOG2013JCLIM} is an assumed PDF higher order closure model that handles shallow convection, planetary boundary layer mixing and cloud macrophysics. The macrophyiscs are coupled with a two-moment bulk cloud microphysics scheme with prognostic precipitation \citep{MG2}, and microphysics are coupled with a three mode Modular Aerosol Model \citep{MAM}. Deep convection is parameterized using a quasi-equilibrium mass flux scheme \citep{ZM1995AO} using a dilute-plume calculation as the convective trigger and to close the mass fluxes \citep{NRJ2008JC}. The deep convection scheme includes convective momentum transport \citep{RR2008JC}.
+The simulations use the CAM6 physics package. The Cloud Layers Unified by Binormals \citep[CLUBB][]{GETAL2002JAS,BOG2013JCLIM} is an assumed PDF high-order closure model that handles shallow convection, planetary boundary layer mixing and cloud macrophysics. The macrophyiscs are coupled with a two-moment bulk cloud microphysics scheme with prognostic precipitation \citep{MG2}, and microphysics are coupled with a three mode Modular Aerosol Model \citep{MAM}. The macrophysics/microphysics combine to produce stratiform precipitation from grid-scale clouds. Deep convection is parameterized using a quasi-equilibrium mass flux scheme \citep{ZM1995AO} and a dilute form of the convective available potential energy (CAPE) is computed to assess the convective trigger ($\geq 70$ J/kg), and for closing the mass fluxes in the cloud ensemble \citep{NRJ2008JC}. The deep convection scheme also parameterizes convective momentum transport \citep{RR2008JC}.
 
 \subsection{Experimental Design}
  
-This convergence study uses an aqua-planet configuration \citep{NH2000ASL,MWO2016JAMES}, an all ocean planet with fixed, zonally symmetric sea surface temperatures modeled after the present day Earth \citep[$QOBS$ in][]{NH2000ASL}. The aqua-planets are in a perpetual equinox, and aerosols are largely absent from the simulations. Each simulation is ran for one simulated year. Six different horizontal grids are used in this study, which are provided in Table~\ref{tbl:table6-1}. The horizontal hyper-viscosity operators $\nu$ vary with resolution after Chapter~\ref{sec:chapter5}, and are also provided in the table. The values of $\nu$ are a factor 2.5 greater for divergence damping and not shown in the Table. $\Delta t_{phys}$ is chosen to scale with resolution, in proportion to the grid spacing,
+The convergence experiment is performed in an aqua-planet configuration \citep{NH2000ASL,MWO2016JAMES}, an all ocean planet with fixed, zonally symmetric sea surface temperatures modeled after present day Earth \citep[$QOBS$ in][]{NH2000ASL}. The aqua-planets are in a perpetual equinox, and aerosols are largely absent from the simulations. Each simulation is ran for one simulated year. Six different horizontal grids are used in this study, which are provided in Table~\ref{tbl:table1}. The horizontal hyper-viscosity operators $\nu$ vary with resolution after \cite{HETAL2019JAMES}, and are also provided in the table. The values of $\nu$ are a factor 2.5 greater for divergence damping and not shown in the Table. $\Delta t_{phys}$ is chosen to scale with resolution, in proportion to the grid spacing,
 \begin{equation}
 \Delta t_{phys} = \Delta t_{phys,0} \times \frac{n_{e,0}}{n_e}~s,\label{eq:dt-scale}
 \end{equation}
-where $\Delta t_{phys,0}$ is taken to be the standard $1800 s$ used in CAM-SE-CSLAM at the standard resolution, $n_{e,0} = ne30$ (equivalent to an average equatorial grid spacing $\Delta x = 111.2$km). This scaling was chosen to avoid large time-truncation errors in a rising moist bubble test (Appendix~\ref{sec:app1}), and it is understood that it will likely lead to greater resolution sensitivity \citep{W2008TELLUS,HR2018JAMES}. The convective time-scale in the deep convection scheme is fixed at 3600 s in all simulations.
+where $\Delta t_{phys,0}$ is taken to be the standard $1800 s$ used in CAM-SE-CSLAM at the standard resolution, $n_{e,0} = ne30$ (equivalent to an average equatorial grid spacing $\Delta x = 111.2$km). This scaling was chosen to avoid large time-truncation errors in a rising moist bubble test (Appendix~\ref{sec:app1}), and it is understood that this choice of $\Delta t_{phys}$ will likely lead to greater resolution sensitivity \citep{W2008TELLUS,HR2018JAMES}. The convective time-scale in the deep convection scheme is fixed at 3600 s in all simulations.
  
 \section{Results}
 
@@ -36,7 +36,7 @@ where $\Delta t_{phys,0}$ is taken to be the standard $1800 s$ used in CAM-SE-CS
    Stratiform Precipitation (mm/day) & 1.26 & 1.42 & 1.60 & 1.85 & 2.05 & 2.22 \\      
  \hline
  \end{tabular}
- \label{tbl:table6-1}
+ \label{tbl:table1}
  \end{table}
 
 Table~\ref{tbl:table6-1} provides a list of some relevant globally averaged metrics that are typically published in CAM-lineage convergence studies. Total precipitable water, total cloud fraction and deep convective precipitation rate decreases, while stratiform precipitation increases, monotonically with resolution. Resolution sensitivity in CAM6 is similar to all prior model versions within the models' lineage. 
@@ -45,7 +45,7 @@ The probability density function (PDF) of negative, or upward vertical pressure 
 
 \begin{figure}[t]
 \begin{center}
-\noindent\includegraphics[width=33pc,angle=0]{figs/temp_2pdf.pdf}\\
+\noindent\includegraphics[width=20pc,angle=0]{figs/temp_2pdf.pdf}\\
 \end{center}
 \caption{Probability density distribution of the upward vertical pressure velocities $\omega$ computed everywhere in the model from 1 year of 6-hourly data (a) raw values (b) scaled to the $ne120$ resolution using $P(\omega)_s = \alpha P (\omega / \alpha)$, where $\alpha$ is from equation~\ref{eq:eq6-1}.}
 \label{fig:2pdf}
@@ -61,7 +61,7 @@ The components of equation~\ref{eq:eq6-2} are shown in Figure~\ref{fig:8panel}a,
 
 \begin{figure}[t]
 \begin{center}
-\noindent\includegraphics[width=33pc,angle=0]{figs/temp_diags_8panel.pdf}\\
+\noindent\includegraphics[width=20pc,angle=0]{figs/temp_diags_4panel.pdf}\\
 \end{center}
 \caption{(a,b,c,e,f,g) Components of the global mean vertical pressure velocity $\overline{\langle \omega \rangle}$ (d) ratio of global mean ZM precipitation rate to the total precipitation rate versus grid spacing $\Delta x$ and (e) scatter plot of $\overline{\langle f_{d} \rangle} \, \overline{\langle \omega_{d} \rangle}$ and FREQZM, and the fitted linear regression which has a Pearson's R-value = 0.99. (a) $\overline{\langle \omega_{u} \rangle}$ (b) $\overline{\langle f_{u} \rangle}$ (c) $\overline{\langle f_{u} \rangle} \, \overline{\langle \omega_{u} \rangle}$ (e) $\overline{\langle \omega_{d} \rangle}$ (f) $ \overline{\langle f_{d} \rangle}$ (g) $\overline{\langle f_{d} \rangle} \, \overline{\langle \omega_{d} \rangle}$. Colors are as in Figure~\ref{fig:2pdf}. Grey crosses are for the perturbed parameter runs.}
 \label{fig:8panel}
